tests/baselines/reference/stringLiteralTypesOverloadAssignability01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability01.ts(2,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability01.ts(7,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability01.ts (2 errors) ====
    
    function f(x: "foo"): number;
             ~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function f(x: string): number {
        return 0;
    }
    
    function g(x: "bar"): number;
             ~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function g(x: string): number {
        return 0;
    }
    
    let a = f;
    let b = g;
    
    a = b;
    b = a;